Cria section card

--- a/index.html
+++ b/index.html
@@ -59,8 +59,13 @@
         </div>
     </main>
 
-    <section class="">
-        <article>adkajshdkajhsdkj</article>
+    <section class="card bg-dark-blue">
+        <article class="article">
+            <img src="./img/teste.jpg" alt="">
+            <div class="text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat harum eius reiciendis, laborum qui non nulla molestias quo saepe est dolores odio consectetur dolorum dicta voluptatibus cupiditate necessitatibus voluptatum exercitationem.</p>
+            </div>
+        </article>
     </section>
     
     <script src="./js/script.js"></script>
