Comprimi as imagens e muda os textos dos heros

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
                 <div class="slide">
                     <img src="./img/hero1.png" alt="Hero Image 1">
                     <div class="slide-text">
-                        <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus nihil excepturi quaerat! Omnis optio reprehenderit doloremque quibusdam pariatur nihil voluptatum, rerum quidem cupiditate iste consequuntur quas impedit, est qui ipsum?</h1>
+                        <h1>Os oceanos e os rios são os pulmões do nosso planeta, fornecendo oxigênio e absorvendo carbono, essenciais para a saúde global</h1>
                     </div>
                 </div>
                 <div class="slide">
                     <img src="./img/hero2.png" alt="Hero Image 2">
                     <div class="slide-text">
-                        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil totam officiis vitae soluta quasi atque beatae, iure maiores sit voluptas repellendus optio ratione eligendi. Dolore eos aliquid id sunt incidunt?</h1>
+                        <h1>Como fonte de biodiversidade incomparável, os oceanos oferecem curas para doenças, inspiração para a ciência e beleza para a alma humana</h1>
                     </div>
                 </div>
                 <div class="slide">
                     <img src="./img/hero3.png" alt="Hero Image 3">
                     <div class="slide-text">
-                        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus quia deserunt modi voluptatem nisi facere deleniti sunt recusandae animi maiores nemo eligendi, explicabo porro! Dolor voluptatibus consectetur quod. Ad, earum.</h1>
+                        <h1>Ao reconhecer a interdependência entre nós e os oceanos, podemos promover a sustentabilidade e preservar esse tesouro vital para as gerações futuras</h1>
                     </div>
                 </div>
             </div>
