Altera menu de navegação

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </div>
             <ul id="navegacao" class="navegacao">
                 <li><a href="integrantes.html">Integrantes</a></li>
-                <li><a href="sobre.hmtl">A</a></li>
-                <li><a href="ecochallenge.html">Eco Challenge</a></li>
+                <li><a href="sobre.hmtl">Sobre o EcoChallenge</a></li>
+                <li><a href="ecochallenge.html">Entre em Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -65,6 +65,15 @@
             <div class="text">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat harum eius reiciendis, laborum qui non nulla molestias quo saepe est dolores odio consectetur dolorum dicta voluptatibus cupiditate necessitatibus voluptatum exercitationem.</p>
             </div>
+        </article>
+    </section>
+
+    <section class="card">
+        <article class="article">
+            <div class="text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat harum eius reiciendis, laborum qui non nulla molestias quo saepe est dolores odio consectetur dolorum dicta voluptatibus cupiditate necessitatibus voluptatum exercitationem.</p>
+            </div>
+            <img src="./img/teste.jpg" alt="">
         </article>
     </section>
     
