Cria novos cards na pagina home

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
                         <h1>Ao reconhecer a interdependência entre nós e os oceanos, podemos promover a sustentabilidade e preservar esse tesouro vital para as gerações futuras</h1>
                     </div>
                 </div>
+                <div class="slide">
+                    <img src="./img/hero4.jpg" alt="Hero Image 3">
+                    <div class="slide-text">
+                        <h1>Os rios são as veias do nosso planeta, fornecendo água, alimento e transporte, além de abrigar uma rica biodiversidade. Preservá-los é essencial para a nossa sobrevivência e bem-estar.</h1>
+                    </div>
+                </div>
             </div>
             <button class="prev">❮</button>
             <button class="next">❯</button>
@@ -61,21 +67,36 @@
 
     <section class="card bg-dark-blue">
         <article class="article">
-            <img src="./img/teste.jpg" alt="">
+            <img src="./img/rank.jpg" alt="">
             <div class="text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat harum eius reiciendis, laborum qui non nulla molestias quo saepe est dolores odio consectetur dolorum dicta voluptatibus cupiditate necessitatibus voluptatum exercitationem.</p>
+                <h2>Rankings Global e Relatórios</h2>
+                <p>Descubra como seu país está se saindo na luta contra a poluição dos oceanos com nossos rankings dinâmicos e relatórios detalhados. Acompanhe o desempenho ao longo do tempo e identifique as áreas que precisam de mais atenção!</p>
             </div>
         </article>
     </section>
 
     <section class="card">
         <article class="article">
-            <div class="text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat harum eius reiciendis, laborum qui non nulla molestias quo saepe est dolores odio consectetur dolorum dicta voluptatibus cupiditate necessitatibus voluptatum exercitationem.</p>
+            <div class=" text-dark-blue text">
+                <h2>Comparações e Tendências</h2>
+                <p>Compare o desempenho de diferentes países e analise as tendências ao longo dos anos. Identifique as melhores práticas e as áreas que necessitam de melhorias para contribuir ainda mais para a saúde dos oceanos!</p>
             </div>
-            <img src="./img/teste.jpg" alt="">
+            <img src="./img/coparacoes.jpg" alt="">
         </article>
     </section>
+
+    <main class="main bg-dark-blue">
+        <article class="article">
+            <img src="./img/uniao.jpg" alt="">
+            <div class="text">
+                <h2>Junte-se a Nós!</h2>
+                <p>Compare o desempenho de diferentes países e analise as tendências ao longo dos anos. Identifique as melhores práticas e as áreas que necessitam de melhorias para contribuir ainda mais para a saúde dos oceanos!</p>
+                <a href="sobre-eco-challenge.html">
+                    <button class="button">Conheça mais sobre o projeto</button>
+                </a>
+            </div>
+        </article>
+    </main>
     
     <script src="./js/script.js"></script>
 </body>
