Finaliza estilização dos cards e cria footer na pagina home

--- a/index.html
+++ b/index.html
@@ -97,6 +97,28 @@
             </div>
         </article>
     </main>
+
+    <footer class="footer">
+        <div class="links-social-media">
+            <div class="facebook">
+                <img src="./img/facebook.svg" alt="facebook">
+            </div>
+            <div class="instagram">
+                <img src="./img/instagram.svg" alt="instagram">
+            </div>
+            <div class="linkedin">
+                <img src="./img/linkedin.svg" alt="linkedin">
+            </div>
+        </div>
+        <ul id="navegacao-footer" class="navegacao-footer">
+            <li><a href="integrantes.html">Integrantes</a></li>
+            <li><a href="sobre.hmtl">Sobre o EcoChallenge</a></li>
+            <li><a href="ecochallenge.html">Entre em Contato</a></li>
+        </ul>
+        <div class="copyright-footer">
+            <p>© Copyright 2024 - Todos os direitos reservados</p>
+        </div>
+    </footer>
     
     <script src="./js/script.js"></script>
 </body>
