Cria pagina integrantes.html

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo-header">
+        <a href="index.html" class="logo-header">
             <img src="./img/logo.png" alt="Home">
-        </div>
+        </a>
         <nav class="nav">
             <div id="btn-toggle-navigation" class="formar-x">
                 <div></div>
