Finaliza pagina integrantes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <ul id="navegacao" class="navegacao">
                 <li><a href="integrantes.html">Integrantes</a></li>
-                <li><a href="sobre.hmtl">Sobre o EcoChallenge</a></li>
+                <li><a href="sobre-eco-challenge.html">Sobre o EcoChallenge</a></li>
                 <li><a href="ecochallenge.html">Entre em Contato</a></li>
             </ul>
         </nav>
