--- a/integrantes.html
+++ b/integrantes.html
@@ -30,7 +30,7 @@
                 </div>
                 <ul id="navegacao" class="navegacao">
                     <li><a href="integrantes.html">Integrantes</a></li>
-                    <li><a href="sobre.hmtl">Sobre o EcoChallenge</a></li>
+                    <li><a href="sobre-eco-challenge.html">Sobre o EcoChallenge</a></li>
                     <li><a href="ecochallenge.html">Entre em Contato</a></li>
                 </ul>
             </nav>
@@ -48,6 +48,10 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section class="title">
+            <h2>Link do nosso diretório: <a href="https://github.com/pedroonovais/WebSiteGlobalSolution2024">https://github.com/pedroonovais/WebSiteGlobalSolution2024</a></h2>
         </section>
 
         <main class="main">
