Finaliza pagina de integrantes

--- a/sobre-eco-challenge.html
+++ b/sobre-eco-challenge.html
@@ -18,6 +18,45 @@
         <link rel="stylesheet" href="./css/sobre-eco-challenge.css" />
     </head>
 <body>
+    <header class="header">
+        <a href="index.html" class="logo-header">
+            <img src="./img/logo.png" alt="Home">
+        </a>
+        <nav class="nav">
+            <div id="btn-toggle-navigation" class="formar-x">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <ul id="navegacao" class="navegacao">
+                <li><a href="integrantes.html">Integrantes</a></li>
+                <li><a href="sobre-eco-challenge.html">Sobre o EcoChallenge</a></li>
+                <li><a href="ecochallenge.html">Entre em Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
     
+    <footer class="footer">
+        <div class="links-social-media">
+            <div class="facebook">
+                <img src="./img/facebook.svg" alt="facebook">
+            </div>
+            <div class="instagram">
+                <img src="./img/instagram.svg" alt="instagram">
+            </div>
+            <div class="linkedin">
+                <img src="./img/linkedin.svg" alt="linkedin">
+            </div>
+        </div>
+        <ul id="navegacao-footer" class="navegacao-footer">
+            <li><a href="integrantes.html">Integrantes</a></li>
+            <li><a href="sobre.hmtl">Sobre o EcoChallenge</a></li>
+            <li><a href="ecochallenge.html">Entre em Contato</a></li>
+        </ul>
+        <div class="copyright-footer">
+            <p>© Copyright 2024 - Todos os direitos reservados</p>
+        </div>
+    </footer>
 </body>
 </html>
