Finaliza pagina sobre o EcoChallenge

--- a/sobre-eco-challenge.html
+++ b/sobre-eco-challenge.html
@@ -31,11 +31,52 @@
             <ul id="navegacao" class="navegacao">
                 <li><a href="integrantes.html">Integrantes</a></li>
                 <li><a href="sobre-eco-challenge.html">Sobre o EcoChallenge</a></li>
-                <li><a href="ecochallenge.html">Entre em Contato</a></li>
             </ul>
         </nav>
     </header>
 
+    <section class="hero bg-dark-blue">
+        <div class="carousel">
+            <div class="slide">
+                <div class="slide-text">
+                    <h1>Sobre o EcoChallenge</h1>
+                    <p class="sub-text">Entenda melhor como funciona nosso projeto e como pode ajudar o Oceano.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="card">
+        <article class="article">
+            <div class=" text-dark-blue text">
+                <h2>Qual é o nosso objetivo?</h2>
+                <p>O nosso objetivo é apresentar uma solução para abordar, o que pouco é falado atualmente, a falta de tratamento de resíduos, apontando o índice de tratamento dos esgotos e uma estimativa da média de resíduos de habitantes por dia. Sendo assim, cada país fornece essas informações devidamente, e pode-se analisar qual o peso e a responsabilidade desse problema em cada continente e país, em relação com a população de cada país com a taxa de tratamento e taxa de resíduos.</p>
+            </div>
+            <img src="./img/objetivo.jpg" alt="">
+        </article>
+    </section>
+
+    <section class="card bg-dark-blue">
+        <article class="article">
+            <img src="./img/visao-de-futuro.jpg" alt="">
+            <div class="text">
+                <h2>Visão de futuro:</h2>
+                <p>A solução foi desenhada para ser utilizada por entidades que desejam conscientizar sobre o problema em seu segmento de atuação, evidenciando o peso exato de cada um.</p>
+                <p>Alguns países apresentam ao longo dos anos clara evolução em sua estrutura de saneamento básico, porém, há outros que década após década, mantem-se praticamente estagnados. A transparência e responsabilização de cada um, mediante o tamanho de sua parcela no problema, irá incentivar as ações para que deixem de ser “promessas”, tornando-se ações concretas.    </p>
+                <p>É esperado que o uso da ferramenta auxilie na melhoria das políticas públicas, fornecendo dados comparativos que podem incentivar os governos a melhorar suas políticas, estabelecer metas e atender a padrões internacionais de desenvolvimento.</p>
+            </div>
+        </article>
+    </section>
+
+    <section class="card">
+        <article class="article">
+            <div class=" text-dark-blue text">
+                <h2>Como funciona o core da solução?</h2>
+                <p>O protótipo funcional da solução foi desenvolvido em Python, onde futuramente pensamos em integrar com um banco de dados Oracle, além disso foi desenvolvido e implementado um diagrama de classes para atender as funcionalidades do sistema em Java. Para contato com os possíveis usuários do sistema e divulgação do projeto foi desenvolvido um Website, utilizando HTML semântico, CSS e Javascript, pensando em atender dispositivos de diferentes tamanho implementamos medias queries para melhor responsividade do Sistema, além disso também foi integrado no website e também no Telegram um chatbot com intuito de tirar duvidas do projeto e também para conscientizar a população sobre medidas para melhorar a saúde dos oceanos.</p>
+            </div>
+            <img src="./img/core.jpg" alt="">
+        </article>
+    </section>
     
     <footer class="footer">
         <div class="links-social-media">
@@ -58,5 +99,7 @@
             <p>© Copyright 2024 - Todos os direitos reservados</p>
         </div>
     </footer>
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
