--- a/integrantes.html
+++ b/integrantes.html
@@ -31,7 +31,6 @@
                 <ul id="navegacao" class="navegacao">
                     <li><a href="integrantes.html">Integrantes</a></li>
                     <li><a href="sobre-eco-challenge.html">Sobre o EcoChallenge</a></li>
-                    <li><a href="ecochallenge.html">Entre em Contato</a></li>
                 </ul>
             </nav>
         </header>
@@ -112,6 +111,6 @@
             </div>
         </footer>
 
-        <script src="integrantes.js"></script>
+        <script src="./js/script.js"></script>
     </body>
 </html>
