Alteração página de integrantes

--- a/integrantes.html
+++ b/integrantes.html
@@ -73,12 +73,12 @@
                 </div>
             </div>
             <div class="participante">
-                <img class="img" src="./img/pedroNovais.jpg" alt="Pedro Novais">
+                <img class="img" src="./img/viniciusBeda.jpg" alt="Vinicius Beda">
                 <div class="text">
-                    <h4>Pedro Novais</h4>
+                    <h4>Vinicius Beda</h4>
                     <p>Turma: 1TDSPX</p>
-                    <p>RM: 555275</p>
-                    <a href="https://github.com/pedroonovais">
+                    <p>RM: 554914</p>
+                    <a href="https://github.com/viniciusbeda">
                         <img src="./img/github.svg" alt="GitHub">
                     </a>
                 </div>
