--- a/integrantes.html
+++ b/integrantes.html
@@ -112,5 +112,6 @@
         </footer>
 
         <script src="./js/script.js"></script>
+        <script src="./js/chatbot.js"></script>
     </body>
 </html>
