Adicionando integrante no grupo

--- a/integrantes.html
+++ b/integrantes.html
@@ -62,12 +62,12 @@
                 </div>
             </div>
             <div class="participante">
-                <img class="img" src="./img/pedroNovais.jpg" alt="Pedro Novais">
+                <img class="img" src="./img/rodrigoBohac.jpg" alt="Rodrigo Ríos">
                 <div class="text">
-                    <h4>Pedro Novais</h4>
+                    <h4>Rodrigo Ríos</h4>
                     <p>Turma: 1TDSPX</p>
-                    <p>RM: 555275</p>
-                    <a href="https://github.com/pedroonovais">
+                    <p>RM: 554826</p>
+                    <a href="https://github.com/RoRios">
                         <img src="./img/github.svg" alt="GitHub">
                     </a>
                 </div>
